--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,71 +3,216 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - CV Manager</title>
+    <title>CV Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/admin.css">
+    <style>
+        :root {
+            --primary-color: #2563eb;
+            --secondary-color: #3b82f6;
+            --text-color: #1f2937;
+            --light-gray: #f3f4f6;
+            --border-radius: 8px;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background: #f0f2f5;
+            padding: 2rem;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 2rem;
+            border-radius: var(--border-radius);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            color: var(--primary-color);
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: 500;
+        }
+
+        input[type="text"], textarea {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #ddd;
+            border-radius: var(--border-radius);
+            font-size: 1rem;
+        }
+
+        textarea {
+            min-height: 100px;
+            resize: vertical;
+        }
+
+        .btn {
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: var(--border-radius);
+            cursor: pointer;
+            font-size: 1rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .btn:hover {
+            background: var(--secondary-color);
+        }
+
+        .btn-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 2rem;
+        }
+
+        .message {
+            padding: 1rem;
+            margin: 1rem 0;
+            border-radius: var(--border-radius);
+            display: none;
+        }
+
+        .success {
+            background: #d1fae5;
+            color: #059669;
+        }
+
+        .error {
+            background: #fee2e2;
+            color: #dc2626;
+        }
+    </style>
 </head>
 <body>
-    <div class="dashboard-container">
-        <nav class="sidebar">
-            <div class="admin-info">
-                <img src="../images/Dayan.jpg" alt="Admin" class="admin-avatar">
-                <h2>Ohon Dayan</h2>
-                <p>Administrator</p>
-            </div>
-            <ul class="nav-links">
-                <li class="active"><a href="#profile"><i class="fas fa-user"></i> Profile</a></li>
-                <li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
-                <li><a href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
-                <li><a href="#experience"><i class="fas fa-briefcase"></i> Experience</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-            </ul>
-            <div class="admin-actions">
-                <a href="../index.html" class="view-site"><i class="fas fa-eye"></i> View Site</a>
-                <button class="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</button>
-            </div>
-        </nav>
+    <div class="container">
+        <h1>CV Editor</h1>
+        
+        <div id="message" class="message"></div>
 
-        <main class="content">
-            <header class="dashboard-header">
-                <h1>Dashboard</h1>
-                <div class="actions">
-                    <button class="save-all"><i class="fas fa-save"></i> Save All Changes</button>
-                </div>
-            </header>
-
-            <div class="edit-sections">
-                <!-- Profile Section -->
-                <section id="profile" class="edit-section">
-                    <h2>Profile Information</h2>
-                    <div class="form-group">
-                        <label>Profile Image</label>
-                        <div class="image-upload">
-                            <img src="../images/Dayan.jpg" alt="Profile Preview" id="profilePreview">
-                            <input type="file" id="profileImage" accept="image/*">
-                            <label for="profileImage" class="upload-btn"><i class="fas fa-upload"></i> Change Image</label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" value="Ohon Dayan">
-                    </div>
-                    <div class="form-group">
-                        <label>Title</label>
-                        <input type="text" value="ИЗОУИС УИТС КПХ 323А-р бүлгийн оюутан">
-                    </div>
-                    <div class="form-group">
-                        <label>About Me</label>
-                        <textarea rows="4">Би олон талын авьяас чадвартай, тууштай, бүтээн байгуулалтад залуу үран бүтээлч...</textarea>
-                    </div>
-                </section>
-
-                <!-- Other sections will be dynamically loaded -->
+        <form id="cvForm">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
             </div>
-        </main>
+
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required>
+            </div>
+
+            <div class="form-group">
+                <label for="aboutMe">About Me:</label>
+                <textarea id="aboutMe" name="aboutMe" required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="skills">Skills (one per line):</label>
+                <textarea id="skills" name="skills" required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="achievements">Achievements (one per line):</label>
+                <textarea id="achievements" name="achievements" required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="experience">Experience (one entry per line):</label>
+                <textarea id="experience" name="experience" required></textarea>
+            </div>
+
+            <div class="btn-container">
+                <button type="button" class="btn" onclick="window.location.href='../index.html'">
+                    <i class="fas fa-arrow-left"></i> Back to Site
+                </button>
+                <button type="submit" class="btn">
+                    <i class="fas fa-save"></i> Save Changes
+                </button>
+            </div>
+        </form>
     </div>
 
-    <script src="../js/admin.js"></script>
+    <script>
+        // Load current content when page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            loadCurrentContent();
+        });
+
+        // Load current content from index.html
+        function loadCurrentContent() {
+            // Get content from localStorage if available
+            const savedContent = localStorage.getItem('cvContent');
+            if (savedContent) {
+                const content = JSON.parse(savedContent);
+                document.getElementById('name').value = content.name || '';
+                document.getElementById('title').value = content.title || '';
+                document.getElementById('aboutMe').value = content.aboutMe || '';
+                document.getElementById('skills').value = content.skills.join('\n') || '';
+                document.getElementById('achievements').value = content.achievements.join('\n') || '';
+                document.getElementById('experience').value = content.experience.join('\n') || '';
+            } else {
+                // Default values
+                document.getElementById('name').value = 'Ohon Dayan';
+                document.getElementById('title').value = 'ИЗОУИС УИТС КПХ 323А-р бүлгийн оюутан';
+                document.getElementById('aboutMe').value = 'Би олон талын авьяас чадвартай, тууштай...';
+                document.getElementById('skills').value = 'Хөлбөмбөг\nСагсан бөмбөг\nВолейбол';
+                document.getElementById('achievements').value = 'SuperStudent 9: Top 20\nSuperStudent 10: Top 11';
+                document.getElementById('experience').value = 'Залуу жүжигчдийн баги - тайз, камерын жүжиг сургалт';
+            }
+        }
+
+        // Handle form submission
+        document.getElementById('cvForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            
+            // Collect form data
+            const content = {
+                name: document.getElementById('name').value,
+                title: document.getElementById('title').value,
+                aboutMe: document.getElementById('aboutMe').value,
+                skills: document.getElementById('skills').value.split('\n').filter(s => s.trim()),
+                achievements: document.getElementById('achievements').value.split('\n').filter(a => a.trim()),
+                experience: document.getElementById('experience').value.split('\n').filter(e => e.trim())
+            };
+
+            // Save to localStorage
+            localStorage.setItem('cvContent', JSON.stringify(content));
+
+            // Show success message
+            const messageDiv = document.getElementById('message');
+            messageDiv.textContent = 'Changes saved successfully!';
+            messageDiv.className = 'message success';
+            messageDiv.style.display = 'block';
+
+            // Hide message after 3 seconds
+            setTimeout(() => {
+                messageDiv.style.display = 'none';
+            }, 3000);
+        });
+    </script>
 </body>
 </html> 
