--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="images/Dayan.jpg" alt="Ohon Dayan">
                 </div>
                 <div class="profile-info">
-                    <h1>Ohon Dayan</h1>
-                    <p class="subtitle">ИЗОУИС УИТС КПХ 323А-р бүлгийн оюутан</p>
+                    <h1 id="name">Ohon Dayan</h1>
+                    <p class="subtitle" id="title">ИЗОУИС УИТС КПХ 323А-р бүлгийн оюутан</p>
                 </div>
             </div>
         </header>
@@ -33,81 +33,66 @@
             <!-- Personal Info Section -->
             <section class="section personal-info">
                 <h2><i class="fas fa-user"></i> Миний тухай</h2>
-                <p>Би олон талын авьяас чадвартай, тууштай, бүтээн байгуулалтад залуу үран бүтээлч, одоон амьдралаас, манлайлагч уул зан чанартай тайлбар, эхлэн онцлорын талбай, боловсролын янзын газдаж оруулгаа, залилан нийгэм, хүртэл хүмүүсийн хүсэл тэмүүлэл, хүсэл тэмүүлэл, хүсэл тэмүүлэлээс ирсэн.</p>
-            </section>
-
-            <!-- Education Section -->
-            <section class="section education">
-                <h2><i class="fas fa-graduation-cap"></i> Амжилт</h2>
-                <ul>
-                    <li>SuperStudent 9: Top 20</li>
-                    <li>SuperStudent 10: Top 11</li>
-                    <li>2021 оны Англи хэлний урын иллтэл – 1-р байр</li>
-                    <li>2022 оны Англи хэлний урын иллтэл – 2-р байр</li>
-                    <li>2018 он – Шилдэг эрүү нэвтрэгч</li>
-                    <li>2018 он – Шилдэг залуу зохиолч</li>
-                </ul>
+                <p id="aboutMe">Би олон талын авьяас чадвартай, тууштай, бүтээн байгуулалтад залуу үран бүтээлч, одоон амьдралаас, манлайлагч уул зан чанартай тайлбар, эхлэн онцлорын талбай, боловсролын янзын газдаж оруулгаа, залилан нийгэм, хүртэл хүмүүсийн хүсэл тэмүүлэл, хүсэл тэмүүлэл, хүсэл тэмүүлэлээс ирсэн.</p>
             </section>
 
             <!-- Skills Section -->
             <section class="section skills">
                 <h2><i class="fas fa-tools"></i> Skills</h2>
-                <ul>
-                    <li>Хөлбөмбөг</li>
-                    <li>Сагсан бөмбөг</li>
-                    <li>Волейбол</li>
-                    <li>Бадминтон</li>
-                    <li>Теннис</li>
-                    <li>Экстрим үндсэн дүгүй</li>
-                    <li>E-sport</li>
-                    <li>Таеквондогийн улаан бүс</li>
-                    <li>Кикбоксоор 6 сар хичээллэсэн</li>
+                <ul id="skillsList">
+                    <!-- Skills will be loaded dynamically -->
                 </ul>
             </section>
 
-            <!-- Language Section -->
-            <section class="section language">
-                <h2><i class="fas fa-language"></i> Language</h2>
-                <div class="language-item">
-                    <span>English (IELTS 8.5)</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%"></div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Contact Section -->
-            <section class="section contact">
-                <h2><i class="fas fa-envelope"></i> Холбоо барих</h2>
-                <p><i class="fas fa-phone"></i> 8990-2252</p>
-                <p><i class="fas fa-envelope"></i> dayan@gmail.com</p>
+            <!-- Education/Achievements Section -->
+            <section class="section education">
+                <h2><i class="fas fa-graduation-cap"></i> Амжилт</h2>
+                <ul id="achievementsList">
+                    <!-- Achievements will be loaded dynamically -->
+                </ul>
             </section>
 
             <!-- Experience Section -->
             <section class="section experience">
                 <h2><i class="fas fa-briefcase"></i> Туршлага</h2>
-                <div class="experience-item">
-                    <h3>"Залуу жүжигчдийн баги" – тайз, камерын жүжиг сургалт</h3>
-                    <h3>Кино, драмын туслах дүрүүд:</h3>
-                    <ul>
-                        <li>"Анагаахын андертнууд"</li>
-                        <li>"Баатруд"</li>
-                        <li>"Зүрхэнд зусэм"</li>
-                        <li>"Хүүхэд морьдчид"</li>
-                    </ul>
-                    <h3>Дуу оруулгын жүжигчин (Voice Actor)</h3>
-                    <ul>
-                        <li>"Beatbox, Rap"</li>
-                        <li>"FL Studio дээр хөгжмийн продюсер"</li>
-                        <li>"DJ"</li>
-                    </ul>
+                <div id="experienceList">
+                    <!-- Experience items will be loaded dynamically -->
                 </div>
             </section>
         </main>
     </div>
 
-    <script src="js/main.js"></script>
     <script>
+        // Load content from localStorage
+        function loadContent() {
+            const savedContent = localStorage.getItem('cvContent');
+            if (savedContent) {
+                const content = JSON.parse(savedContent);
+                
+                // Update text content
+                document.getElementById('name').textContent = content.name;
+                document.getElementById('title').textContent = content.title;
+                document.getElementById('aboutMe').textContent = content.aboutMe;
+
+                // Update skills
+                const skillsList = document.getElementById('skillsList');
+                skillsList.innerHTML = content.skills.map(skill => `<li>${skill}</li>`).join('');
+
+                // Update achievements
+                const achievementsList = document.getElementById('achievementsList');
+                achievementsList.innerHTML = content.achievements.map(achievement => `<li>${achievement}</li>`).join('');
+
+                // Update experience
+                const experienceList = document.getElementById('experienceList');
+                experienceList.innerHTML = content.experience.map(exp => `
+                    <div class="experience-item">
+                        <h3>${exp}</h3>
+                    </div>
+                `).join('');
+            }
+        }
+
+        // Check admin access
         function checkAdminAccess(event) {
             event.preventDefault();
             const password = prompt('Enter admin password:');
@@ -118,6 +103,9 @@
             }
             return false;
         }
+
+        // Load content when page loads
+        document.addEventListener('DOMContentLoaded', loadContent);
     </script>
 </body>
 </html> 
